# peru-transparente

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  salariosperu_cuadro.proposed.csv  salariosperu_reconciliacion.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: provider.py
backend/app/api/v1/: contracts.py  dashboards.py  entities.py  graph.py  officials.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/graph/: neo4j_client.py
backend/app/schemas/: common.py
backend/tests/: test_health.py
data/: FUNCIONARIOS_README.md  README.md  _funcionarios_por_entidad.csv  _planillas_compartidas.json  _reg.csv  airhsp_por_grupo.csv  airhsp_por_regimen.csv  autoridades.checkpoint.json  autoridades.csv  entidades.csv  funcionarios.checkpoint.json  funcionarios.csv  funcionarios_clave.csv  salarios_pt_por_entidad_regimen.csv  salarios_pt_por_regimen.csv
docs/: ARCHITECTURE.md  DATA_MODEL.md  DATA_QUALITY.md  FLUJO.md  INFRASTRUCTURE.md  LEGAL.md  MVP_90_DIAS.md  NEO4J_SCHEMA.md  ROADMAP.md  SCALABILITY.md  SCRAPING_STRATEGY.md  UI_UX.md
etl/: build_static.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
scrapers/: pyproject.toml
scrapers/peru_transparente/: base.py  sources.yaml
scrapers/peru_transparente/connectors/: fonafe.py  gobpe_directorio.py  osce_ocds.py  pte_catalogo.py  pte_personal.py
scripts/: _build_cuadro_proposed.py  _recon_salariosperu.py  _recon_salariosperu2.py  (+18 more)
(+934 files in other folders)
