[project]
name = "peru-transparente-api"
version = "0.1.0"
description = "API REST + GraphQL de Perú Transparente"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "neo4j>=5.25",
    "redis>=5.1",
    "strawberry-graphql[fastapi]>=0.246",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "rapidfuzz>=3.10",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
